# error_predictive_learning

./: Cargo.toml  README.md
examples/: cos_sin.rs  lin.rs  quad.rs  test.rs  xsin.rs
src/: lib.rs  utils.rs
